# ziti-sdk-py

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pytest.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: mattermost-ziti-webhook.yml  wheels.yml
sample/: README.md  demo-run.py  h-ziti-p.py  http-get.py  requirements.txt  ziti-echo-server.py  ziti-http-server.py  ziti-socket-sample.py
sample/async/: README.md  sample-aiohttp.py  sample-async.py
sample/authentication/: sample_auth.py
sample/flask-of-ziti/: README.md  helloFlazk.py  requirements.txt
sample/http-get/: http-get.py
sample/s3z/: .gitignore  README.md  log-generator.py  requirements.txt  s3z.py
sample/ziti-echo-server/: README.md  ziti-echo-client.py  ziti-echo-server.py
sample/ziti-http-server/: README.md  ziti-http-server.py
sample/ziti-requests/: README.md  ziti-requests.py
sample/ziti-socket/: README.md  ziti-socket.py
sample/ziti-socket-example/: ziti-socket-sample.py
sample/ziti-urllib3/: README.md  ziti-urllib3.py
sample/ziti-uvicorn/: README.md  ziti-uvicorn.py
src/openziti/: .pylintrc  __init__.py  __main__.py  _version.py  context.py  decor.py  zitilib.py  zitisock.py
tests/: conftest.py  connect_test.py  requirements.txt  run_ziti.py  util.py  util_test.py  util_tests.py  ziti_tests.py
tools/: get_zitilib.py
ziti/: __init__.py  _version_src.py  context.py  zitilib.py  zitisock.py
