[metadata]
name = openziti
author = OpenZiti Developers
author_email = developers@openziti.org
description = 'Ziti Python SDK'
long_description = file: README.md
long_description_content_type = 'text/markdown'
url = 'https://github.com/openziti/ziti-sdk-py'
license = Apache 2.0
project_urls =
    Documentation = 'https://openziti.github.io/ziti/overview.html'
    Source = 'https://github.com/openziti/ziti-sdk-py'
    Tracker = 'https://github.com/openziti/ziti-sdk-py/issues'
    Discussion = 'https://openziti.discourse.group/'
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5

[options]
package_dir =
   = src
packages = find:

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/openziti/_version.py
versionfile_build = openziti/_version.py
tag_prefix = v
parentdir_prefix = openziti-

[openziti]
ziti_sdk_version = 0.28.2